fix template color